--- a/static/styles.css
+++ b/static/styles.css
@@ -82,6 +82,21 @@ main {
     background-color: #1a252a;
 }
 
+/* General button styles */
+button {
+    padding: 5px 10px;
+    font-size: 16px;
+    background-color: #263238;
+    color: white;
+    border: 2px solid #000000;
+    cursor: pointer;
+    border-radius: 0; /* Ensure square corners */
+}
+
+button:hover {
+    background-color: #1a252a;
+}
+
 /* Header and Footer styles */
 .header {
     position: fixed;
