--- a/templates/index.html
+++ b/templates/index.html
@@ -115,12 +115,11 @@
             </div>
             <textarea id="share-text" readonly style="width: 225px; height: 156px; padding: 5px; font-size: 14px; resize: vertical; margin: 0 auto; display: block; background-color: #fff; border: 2px solid #ccc;">
                 {% if share_text %}
-                    {{ share_text }}
+                    {{ share_text }}&#10;wurdle.santoelectronics.com
                 {% else %}
-                    Enter guesses to see results here!
+                    Enter guesses to see results here!&#10;wurdle.santoelectronics.com
                 {% endif %}
             </textarea>
-            <p style="font-size: 12px; text-align: center; margin-top: 5px;"><a href="https://wurdle.santoelectronics.com" style="color: #263238; text-decoration: none;">wurdle.santoelectronics.com</a></p>
         {% endif %}
     </div>
     <div class="footer">
@@ -156,7 +155,7 @@
 
             if (data.message) {
                 document.getElementById('message').textContent = data.message;
-                document.getElementById('share-text').value = data.share_text;
+                document.getElementById('share-text').value = data.share_text + '\nwurdle.santoelectronics.com';
             }
         }
 
@@ -203,7 +202,7 @@
                     renderBoard();
                 }
                 if (data.share_text) {
-                    document.getElementById('share-text').value = data.share_text;
+                    document.getElementById('share-text').value = data.share_text + '\nwurdle.santoelectronics.com';
                 }
             });
         };
