--- a/templates/index.html
+++ b/templates/index.html
@@ -115,9 +115,9 @@
             </div>
             <textarea id="share-text" readonly style="width: 225px; height: 156px; padding: 5px; font-size: 14px; resize: vertical; margin: 0 auto; display: block; background-color: #fff; border: 2px solid #ccc;">
                 {% if share_text %}
-                    {{ share_text }}&#10;wurdle.santoelectronics.com
+                    {{ share_text }}wurdle.santoelectronics.com
                 {% else %}
-                    Enter guesses to see results here!&#10;wurdle.santoelectronics.com
+                    Enter guesses to see results here!wurdle.santoelectronics.com
                 {% endif %}
             </textarea>
         {% endif %}
@@ -155,7 +155,7 @@
 
             if (data.message) {
                 document.getElementById('message').textContent = data.message;
-                document.getElementById('share-text').value = data.share_text + '\nwurdle.santoelectronics.com';
+                document.getElementById('share-text').value = data.share_text + ' wurdle.santoelectronics.com';
             }
         }
 
@@ -202,7 +202,7 @@
                     renderBoard();
                 }
                 if (data.share_text) {
-                    document.getElementById('share-text').value = data.share_text + '\nwurdle.santoelectronics.com';
+                    document.getElementById('share-text').value = data.share_text + ' wurdle.santoelectronics.com';
                 }
             });
         };
