--- a/templates/index.html
+++ b/templates/index.html
@@ -95,8 +95,8 @@
     <div class="content">
         {% if game_blocked %}
             <p id="blocked-message">{{ message }}</p>
-            <a href="/wordlist" class="nav-button">View Word List</a>
-            <a href="/stats" class="nav-button">View Stats</a>
+            <a href="/wordlist">View Word List</a>
+            <a href="/stats">View Stats</a>
         {% else %}
             <div id="game-board"></div>
             <div id="input-area">
@@ -105,19 +105,19 @@
                     <button onclick="submitGuess()">Submit</button>
                 </div>
                 <div class="link-row">
-                    <a href="/wordlist" class="nav-button">View Word List</a>
-                    <a href="/stats" class="nav-button">View Stats</a>
+                    <a href="/wordlist">View Word List</a>
+                    <a href="/stats">View Stats</a>
                 </div>
             </div>
             <p id="message"></p>
             <div style="text-align: center; margin: 10px 0;">
-                <button onclick="copyShareText()" style="margin-bottom: 5px;">Share Results</button>
+                <a href="#" onclick="copyShareText(); return false;" style="margin-bottom: 5px;">Share Results</a>
             </div>
             <textarea id="share-text" readonly style="width: 225px; height: 156px; padding: 5px; font-size: 14px; resize: vertical; margin: 0 auto; display: block; background-color: #fff; border: 2px solid #ccc;">
                 {% if share_text %}
-                    {{ share_text }}wurdle.santoelectronics.com
+                    {{ share_text }} wurdle.santoelectronics.com
                 {% else %}
-                    Enter guesses to see results here!wurdle.santoelectronics.com
+                    Enter guesses to see results here! wurdle.santoelectronics.com
                 {% endif %}
             </textarea>
         {% endif %}
